## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = opencrakular

opencrakular_SOURCES = \
	func.cpp \
	func.h \
	Glb.h \
	main.cpp \
	md5lib.cpp \
	md5lib.h \
	panic.cpp \
	panic.h \
	try.cpp \
	try.h

opencrakular_LDFLAGS = 

opencrakular_LDADD = 

